--- a/client/style.css
+++ b/client/style.css
@@ -1,23 +1,28 @@
-#home img {
-    border-radius: 8px;
-    padding: 30px;
-    width: 400px;
-    margin-left: 30px;
-
-}
-
-#home {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    margin-right: 570px;
-}
-
-#home h4  {
-    padding-bottom: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-#home p{
-    margin-left: 27px;
-}
+body {
+    margin: 0;
+  }
+  
+  .navbar {
+    background-color: #3CB371; 
+    overflow: hidden;
+    position: sticky;
+    top: 0;
+  }
+  
+  .navbar a {
+    float: left;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 18px;
+  }
+  
+  .navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .navbar a.active {
+    background-color: #4CAF50;
+  }
