--- a/style.css
+++ b/style.css
@@ -1,175 +1,165 @@
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar {
-  background-color: #3cb371;
-  overflow: hidden;
-  position: sticky;
-  top: 0;
-}
-
-.navbar a {
-  float: left;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 18px;
-}
-
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.navbar a.active {
-  background-color: #4caf50;
-}
-
-ul {
-  list-style-type: none;
+* {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-li {
-  margin-bottom: 10px;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-#home img {
-  border-radius: 8px;
-  padding: 30px;
-  width: 400px;
-  margin-left: 30px;
+.container {
+  max-width: 1200px;
+  width: 90%;
+  margin: auto;
 }
+
+/* Navbar */
+
+.navbar {
+  background-color: #f7e6c4;
+  height: 65px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-items {
+  order: 2;
+  display: flex;
+}
+
+.navbar-items li {
+  list-style: none;
+  margin-left: 1.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
+}
+
+.navbar-items a {
+  color: black;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.3s ease-in-out;
+}
+
+/* Home */
 
 #home {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 17px;
-  margin-right: 570px;
+  padding: 50px 0;
+  background-color: #f1c376;
 }
 
-#home h4 {
-  padding-bottom: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-#home p {
-  margin-left: 27px;
-}
-
-.heading {
-  display: flex;
-  flex-direction: column;
-  margin-right: 8rem;
-  margin-left: 7rem;
-
-  font-size: 15px;
-  line-height: 2;
-}
-
-footer {
-  height: 25vh;
+.home-wrapper {
   display: flex;
   flex-wrap: wrap;
-  background-color: #e3dbdb;
 }
 
-footer h2 {
-  margin-bottom: 2rem;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
+#home h2 {
+  font-size: 2.3rem;
 }
 
-footer ul {
-  list-style-type: none;
-  margin-left: -3rem;
-  margin-top: -1ch;
-}
-
-#restaurant-menu {
-  border-left: 1px solid black;
-  background-color: #e1d7ca;
-  margin-right: 670px;
-  padding-top: -60px;
-}
-
-#first-row,
-#second-row,
-#third-row {
-  display: flex;
-}
-img {
-  border-radius: 8px;
-  padding: 30px;
-  width: 400px;
-  margin-left: 30px;
-  margin-right: -80px;
-  align-items: center;
-  height: 400px;
-}
-
-#appetizer,
-#menu,
-#main-course,
-#dessert,
-#drinks,
-#chefs-specials {
-  width: 30%;
-  padding: 50px;
-}
-
-#menu {
-  font-size: 88px;
-  overflow-wrap: break-word;
-}
-#home {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 17px;
-  margin-right: 570px;
-}
-
-#appetizer h2,
-#drinks h2,
-#dessert h2,
-#main-course h2 {
-  border-top: 3px solid;
-  border-bottom: 3px solid;
-}
-
-#appetizer,
-#chefs-specials,
-#drinks {
-  border-left: 3px solid;
-}
-
-h2 {
-  text-align: center;
-}
-
-.dish-name {
-  font-weight: bold;
-}
-
-.dish-price {
-  float: right;
-  font-weight: bold;
-}
-#home h4 {
-  padding-bottom: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-#chefs-specials h2 {
-  background-color: black;
-  color: #e1d7ca;
-  width: 300px;
-  height: 50px;
-}
 #home p {
-  margin-left: 27px;
+  font-size: 1.2rem;
+}
+
+.home-text {
+  flex: 1 1 400px;
+  padding: 30px;
+  margin: auto;
+}
+
+.home-image img {
+  display: block;
+  height: 400px;
+  max-width: 100%;
+  margin: auto;
+  object-fit: cover;
+  object-position: right;
+  border-radius: 10%;
+}
+
+/* Drinks */
+
+#drink-menu {
+  /* color: #f29727; */
+  background-color: #f7e6c4;
+}
+
+.drink-menu-heading {
+  text-align: center;
+  font-size: 3.4rem;
+  font-weight: 400;
+}
+
+.drink-menu-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px 0px 30px 0px;
+}
+
+.drink-menu-item {
+  display: flex;
+  flex: 1 1 600px;
+  justify-content: space-evenly;
+  margin-bottom: 3rem;
+}
+
+.drink-description {
+  margin: auto 1.5rem;
+}
+
+.drink-description p {
+  font-size: 1.4rem;
+  color: black;
+  font-weight: 500;
+}
+
+/* Reviews */
+
+#reviews {
+  padding: 3rem 0;
+  background-color: #f1c376;
+}
+
+.reviews-title {
+  text-align: center;
+  font-size: 2.8rem;
+  font-weight: 400;
+}
+
+.reviews-container {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.4rem;
+  padding: 1rem;
+}
+
+.reviews-box .reviews-text {
+  margin: 2rem 0;
+}
+
+.reviews-box {
+  text-align: center;
+  padding: 2rem;
+}
+
+.customer-photo img {
+  display: block;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
+  margin: auto;
+}
+
+/* Footer */
+
+#footer h2 {
+  text-align: center;
+  font-size: 1.8rem;
+  padding: 2.6rem;
+  font-weight: 500;
+  background-color: #f29727;
 }
